# aige_song_list_xlsx

./: README.md  main.py  pyproject.toml  鸽宝歌单整理.xlsx
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml  song-add.yaml
.github/PULL_REQUEST_TEMPLATE/: new-songs.yaml
.github/workflows/: update-song-list.yml
