[tool.poetry]
name = "aige_song_list_xlsx"
version = "0.1.0"
description = ""
authors = ["铂屑 <80164656+boxie123@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# default = true
